<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="MAIN" Id="{372593b4-1746-4f2d-8630-4bf2374df086}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	fbAxisEthMaster: FB_AxisEthMaster;
	M1: FB_AxisMaster;
	M2: FB_AxisMaster;
	M3: FB_AxisMaster;
	bFirstCycle: BOOL := TRUE;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Set the initial configs and enable, but only once so we can change configs or disable later
IF bFirstCycle THEN
	M2.stConfigSet.ref_vel := 10;
	M2.stConfigSet.max_vel := 20;
	M2.stConfigSet.man_fast := 15;
	M2.stConfigSet.man_slow := 5;
	M2.stConfigSet.enc_scale := 0.001;
	M2.stConfigSet.max_current := 1100;
	M3.stConfigSet.ref_vel := 11;
	M3.stConfigSet.max_vel := 21;
	M3.stConfigSet.man_fast := 16;
	M3.stConfigSet.man_slow := 6;
	M3.stConfigSet.enc_scale := 0.002;
	M3.stConfigSet.max_current := 1234;
	
	M1.bEnable := TRUE;
	M2.bEnable := TRUE;
	M3.bEnable := TRUE;
	bFirstCycle := FALSE;
END_IF
// Bring MASTER to OP once SLAVEs are PRE-OP
fbAxisEthMaster(bExecute:=M1.bInitPreOp AND M2.bInitPreOp AND M3.bInitPreOp);

// Enable and pass Cfg
M1(bLimitSwitch:=FALSE,
	bInitCfg:=FALSE,
	bCfgRO:=FALSE);
M2(bInitCfg:=TRUE,
	bCfgRO:=FALSE,
	nEncCh:=1);
M3(bInitCfg:=TRUE,
	bCfgRO:=TRUE,
	nEncCh:=2);]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="208" Count="0" />
      <LineId Id="72" Count="4" />
      <LineId Id="82" Count="0" />
      <LineId Id="77" Count="4" />
      <LineId Id="83" Count="0" />
      <LineId Id="292" Count="3" />
      <LineId Id="170" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="244" Count="0" />
      <LineId Id="246" Count="0" />
      <LineId Id="250" Count="0" />
      <LineId Id="245" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="171" Count="0" />
      <LineId Id="173" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="176" Count="0" />
      <LineId Id="277" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="178" Count="0" />
      <LineId Id="278" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>